--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ uvicorn[standard]
 google-generativeai
 python-dotenv
 python-jose[cryptography]
-passlib
-bcrypt==3.2.0
+passlib[bcrypt]
+bcrypt
 pandas
 openpyxl
 fpdf2
